fix config files and other cleanups
Signed-off-by: Petar Tonev <petar.tonev@limechain.tech>